@@ -34,7 +34,6 @@ body
 <input type="button" value="SheetHTML" onclick="alert(spreadsheet.CreateSheetHTML());" class="smaller">
 <input type="button" value="SheetSave" onclick="alert(spreadsheet.CreateSheetSave());" class="smaller">
 <input type="button" value="Attribs" onclick="doattribs();" class="smaller">
-<input type="button" value="Copy" onclick="newcopy();" class="smaller">
 <textarea id="savestr" style="display:none;"></textarea>
 <input type="hidden" name="newstr" id="newdata" value="">
 <input type="hidden" name="pagename" value="$pagename">
